Correcting config/database.yml for mysql in development and postgresql for production mode

--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,7 @@ test:
 #
 production:
   <<: *default
-  database: filemanager4_production
+  adapter: postgresql
+  database: filemanager_production
   username: filemanager
   password: <%= ENV['FILEMANAGER_DATABASE_PASSWORD'] %>
