--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore Idea files
+/.idea
+/.idea/*
+
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
